# project2-sugonyaev-m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/data/: cats.json  students.json  test.json
src/primitive_db/: consts.py  core.py  decorators.py  engine.py  logger.py  main.py  parser.py  utils.py
src/primitive_db/data/: users.json
