[project]
name = "primirive_db"
version = "0.1.0"
description = ""
authors = [
    {name = "arthuras",email = "arthuras.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.16.0,<3.17.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "primirive_db"
version = "0.1.0"
description = ""
authors = ["arthuras <arthuras.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[[tool.poetry.packages]]
include = "src"
from = "."
